plugins {
    id 'java-library'
    id 'maven-publish'
    id 'org.jreleaser' version '1.15.0'
}

allprojects {
    group = 'co.za.payu'
    version = '2.0.0'
    sourceCompatibility = 21
    targetCompatibility = 21

    repositories {
        mavenCentral()
    }
    // Currently disables doclint
    tasks.withType(Javadoc) {
        options.addStringOption('Xdoclint:none', '-quiet')
    }
}

java {
    withJavadocJar()
    withSourcesJar()
}

publishing {
    publications {
        maven(MavenPublication) {
            groupId = 'za.co.nanoteck'
            artifactId = 'payu-mea-java-sdk'

            from components.java

            pom {
                name = 'app'
                description = 'PayU MEA Secure Payments SDK for payments integration'
                url = 'https://github.com/PayUMEA/payu-mea-java-sdk'
                inceptionYear = '2024'
                licenses {
                    license {
                        name = 'MIT License'
                        url = 'https://github.com/PayUMEA/payu-mea-java-sdk/LICENSE.md'
                    }
                }
                developers {
                    developer {
                        id = 'nanoteck'
                        name = 'Kenneth Madu'
                    }
                }
                scm {
                    connection = 'scm:git:https://github.com/PayUMEA/payu-mea-java-sdk.git'
                    developerConnection = 'scm:git:ssh://github.com/PayUMEA/payu-mea-java-sdk.git'
                    url = 'http://github.com/PayUMEA/payu-mea-java-sdk'
                }
            }
        }
    }

    repositories {
        maven {
            url = layout.buildDirectory.dir('staging-deploy')
        }
    }
}

// GLOBAL METHODS
def getRepositoryUsername() {
    return hasProperty('sonatypeUsername') ? sonatypeUsername : ""
}

def getRepositoryPassword() {
    return hasProperty('sonatypePassword') ? sonatypePassword : ""
}

ext.isReleaseVersion = !version.endsWith("SNAPSHOT")